samples/_failures_safe/1761366820_a605ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_907e95aa.c: In function ‘main’:
./samples/SAFE/__tmp_907e95aa.c:130:5: error: expected expression at end of input
  130 |     if (!read_size_t("Enter cols for matrix A: ", &cols))
      |     ^~
./samples/SAFE/__tmp_907e95aa.c:130:5: error: expected declaration or statement at end of input
